--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container" id="contact">
 						<header>
-							<h2>Please see contact information below.</h2>
+							<h2>Contact Information</h2>
 						</header>
 					</div>
 				</section>
@@ -161,7 +161,7 @@
 						<section class="row">
 							<div class="col-6 col-12-narrower col-12-mobilep">
 								<h3>Northtown Psychology Associates, LLC<br>
-                    				Address: 199 Coon Rapids Blvd NW #113<br>
+                    				                    199 Coon Rapids Blvd NW #113<br>
 									Coon Rapids, MN 55433<br>
 									Phone: 763-785-8111
 								</h3>
