--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<p style="color:red;font-size:20px;">We are currently experiencing an issue with our Email server.  Please be advised that this may affect both incoming and outgoing email communication.  We are working hard to resolve this issue, as efficiently as possible. When updated information is available, it will be posted here. Thank you for your patience and apologies for any inconvenience.  To reach any of our clinicians, please call 763-785-8111</p>
+					<p style="color:red;font-size:20px;">We are happy to report that the issues we were having with our email system have been fully resolved. All clinicians are now able to receive and send emails. Thank you for your patience with this matter.</p>
 					<div class="photo-text-container">
 							<img src="./images/Northtown_Staff.jpg" alt="Northtown Group Photo" width="800"; height="350"; margin="100";>
 								<div class="photo-text">
