--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     						<div class="tr">
         						<div class="d1">199 COON RAPIDS BLVD NW #113</div>
         						<div class="d2">COON RAPIDS, MN 55433</div>
-        						<div class="d3">763-785-8111</div>
+							<div class="d3">763-785-8111</div>
     						</div>
 						</div>
 
@@ -164,7 +164,7 @@
 								<h3>Northtown Psychology Associates, LLC<br>
                     				                    199 Coon Rapids Blvd NW #113<br>
 									Coon Rapids, MN 55433<br>
-									Phone: 763-785-8111
+									Phone: <a href="tel:763-785-8111">763-785-8111</a>
 								</h3>
 							</div>
 
