add telephone link to "About" section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div class="container">
 						<header class="major">
 							<h2 id="about">About Northtown</h2>
-							<p>Northtown Psychology Associates was founded March of 2002 to serve the mental health needs of the North Metro Area. It has thrived in the area betweeen Unity Hospital and Mercy Hospital, and continues to be a reliable and stable environment for those seeking psychological services. If you wish to make an appointment with one of our mental health professionals, please call 763-785-8111.</p>
+							<p>Northtown Psychology Associates was founded March of 2002 to serve the mental health needs of the North Metro Area. It has thrived in the area betweeen Unity Hospital and Mercy Hospital, and continues to be a reliable and stable environment for those seeking psychological services. If you wish to make an appointment with one of our mental health professionals, please call <a href="tel:763-785-8111">763-785-8111</a>.</p>
 						</header>
 					</div>
 				</section>
