add margin bottom to map

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							</section> -->
 
 
-							<div class="col-6 col-12-narrower col-12-mobilep">
+							<div class="col-6 col-12-narrower col-12-mobilep" style="margin-bottom:60px;">
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2814.423742130205!2d-93.27458568445343!3d45.13801197909844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32529a89796bf%3A0x429f3c7d66d26e58!2s199%20Coon%20Rapids%20Blvd%20NW%20%23113%2C%20Coon%20Rapids%2C%20MN%2055433!5e0!3m2!1sen!2sus!4v1617230770798!5m2!1sen!2sus" width="600" height="450" style="border: solid grey 5px;" allowfullscreen="" loading="lazy"></iframe>
 							</div>
 						</section>
