add good faith estimate notice

--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2814.423742130205!2d-93.27458568445343!3d45.13801197909844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32529a89796bf%3A0x429f3c7d66d26e58!2s199%20Coon%20Rapids%20Blvd%20NW%20%23113%2C%20Coon%20Rapids%2C%20MN%2055433!5e0!3m2!1sen!2sus!4v1617230770798!5m2!1sen!2sus" width="600" height="450" style="border: solid grey 5px;" allowfullscreen="" loading="lazy"></iframe>
 							</div>
 						</section>
+						
+						<section class="row" style="margin-top:40px; margin:auto;">
+							<div class="col-12-narrower col-12-mobilep" style="background-color:white;margin: auto; text-align:left;">
+								<h4>Good Faith Estimate Notice:</h4>
+ 								<p style=padding-right:20px;>You have the right to receive a “Good Faith Estimate” explaining how much your medical and mental health care will cost. 
+								Under the law, health care providers need to give patients who don’t have insurance or who are not using insurance an estimate of the expected charges for medical services, including psychotherapy services.  
+								You have the right to receive a Good Faith Estimate for the total expected cost of any non-emergency healthcare services, including psychotherapy services. 
+								You can ask your health care provider, and any other provider you choose, for a Good Faith Estimate before you schedule a service.
+								If you receive a bill that is at least $400 more than your Good Faith Estimate, you can dispute the bill. Make sure to save a copy or picture of your Good Faith Estimate.
+								For questions or more information about your right to a Good Faith Estimate, speak to your therapist or visit <a href="www.cms.gov/nosurprises">www.cms.gov/nosurprises</a>.
+							</p>
+							</div>
+						</section>
 					</div>
 				</div>
 				
