fix good faith estimate link

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 								You have the right to receive a Good Faith Estimate for the total expected cost of any non-emergency healthcare services, including psychotherapy services. 
 								You can ask your health care provider, and any other provider you choose, for a Good Faith Estimate before you schedule a service.
 								If you receive a bill that is at least $400 more than your Good Faith Estimate, you can dispute the bill. Make sure to save a copy or picture of your Good Faith Estimate.
-								For questions or more information about your right to a Good Faith Estimate, speak to your therapist or visit <a href="www.cms.gov/nosurprises">www.cms.gov/nosurprises</a>.
+								For questions or more information about your right to a Good Faith Estimate, speak to your therapist or visit <a href="https://www.cms.gov/nosurprises">www.cms.gov/nosurprises</a>.
 							</p>
 							</div>
 						</section>
